--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
-== README
+== Top Links
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Find top links in your network. Live demo - http://toplinkstw.herokuapp.com
 
-Things you may want to cover:
+Pls set your twitter api key & secret key in config/application.yml
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
